background added to the whole app

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="push-footer" style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0; background-repeat: no-repeat; background-size: auto;">
+<div class="push-footer">
     <div class="container" style="padding: 200px">
       <div class="col-sm-12 offset-md-3 col-md-6 ">
         <h1 style="color: white">New Booking</h1>
