--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body>
+  <body style="color: white; background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); width: 100vw; margin-left: 0; margin-right: 0; background-repeat: no-repeat; background-size: auto;">>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <br>
