--- a/app/views/spaceships/new.html.erb
+++ b/app/views/spaceships/new.html.erb
@@ -1,7 +1,6 @@
 
-<div style="background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); width: 100vw; margin-top:19px; margin-left: 0; margin-right: 0; background-repeat: no-repeat; background-size: auto; ">
+<div>
     <div class="container push-footer" style="color: white">
-
       <h1 style="color:white; padding-top: 100px;">New Spaceship</h1>
       <%= simple_form_for(@spaceship) do |f| %>
       <%= f.input :model %>
