--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,10 +77,10 @@
 .card-product {
     overflow: hidden;
     height: 250px;
-    background: white;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     display: flex;
     align-items: center;
+    border: 1px solid white;
     border-radius: 25px;
     width: 100%;
   }
