Changed background in dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="container-main" style="color: white; background-image: url(https://wallpapercave.com/wp/wp3837738.jpg); width: 100vw; margin-left: 0; margin-right: 0; background-repeat: no-repeat; background-size: auto;">
+<div class="container-main">
   <div class="container">
     <% if current_user.booked_spaceships.count == 0 %>
       
