--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,14 +1,14 @@
-<div class="container-main">
+<div class="container-main push-footer pt-5">
   <div class="container">
     <% if current_user.booked_spaceships.count == 0 %>
       
-      <div class="container">
+      <div class="container ">
         <h1>Hello, <%= current_user.email_or_first_name %></h1>
         <h1>Oops looks like you haven't booked anything yet.</h1>
         <%= cl_image_tag("https://mir-s3-cdn-cf.behance.net/project_modules/disp/fb647f64972709.5ae3ca25041dc.gif") %>
         
         <div style="padding-top: 14px">
-          <%= link_to 'Check out available Spaceships', spaceships_path, class: "btn btn-dark" %>      
+          <%= link_to 'Check out available Spaceships', spaceships_path, class: "btn btn-primary" %>      
         </div>
       </div>
 
